updates as of 08302024

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -10,19 +10,19 @@
                 <img src="/assets/images/montanologo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
             </a>
             <div class="cs-contact-group">
-                <a class="cs-contact-link" href="mailto:Info@invetexfinance.com">
+                <a class="cs-contact-link" href="mailto:yeg.mpc@gmail.com">
                     <picture class="cs-wrapper">
                         <img class="cs-icon" loading="lazy" decoding="async" src="https://img.icons8.com/?size=100&id=85022&format=png&color=3952A2" alt="icon" width="24" height="24">
                     </picture>
                     <div class="cs-info">
                         <span class="cs-header">Send A Message</span>
-                        <span class="cs-link-content">Info@invetexfinance.com</span>
+                        <span class="cs-link-content">yeg.mpc@gmail.com</span>
                     </div>
                 </a>
                 <a class="cs-contact-link" href="mailto:Info@health&wellness.com">
                   
                 </a>
-                <a href="" class="cs-button-solid">Schedule Appointment</a>
+                <a href="/contact" class="cs-button-solid">Schedule Appointment</a>
             </div>
             <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
              <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
