--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -65,7 +65,8 @@
         padding: 0 1.5rem;
         overflow: hidden;
         border-radius: 0.25rem;
-        background-color: var(--primary);
+        background: rgb(35,155,236);
+background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
         display: inline-block;
         position: relative;
         z-index: 1;
