--- a/src/assets/less/blog.less
+++ b/src/assets/less/blog.less
@@ -1238,7 +1238,7 @@
     padding: 0.5rem 1rem;
     /* prevents padding and border from affecting height and width */
     box-sizing: border-box;
-    background-color: #1a1a1a;
+    background-color: #3952A2;
     color: #fff;
     display: inline-block;
     position: absolute;
