--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -1216,7 +1216,7 @@
     padding: 0.5rem 1rem;
     /* prevents padding and border from affecting height and width */
     box-sizing: border-box;
-    background-color: #1a1a1a;
+    background-color: #3952A2;
     color: #fff;
     display: inline-block;
     position: absolute;
