--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -997,6 +997,191 @@
 <---           Hero             -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
+html,
+body,
+#carousel,
+#carousel ul,
+#carousel li {
+  min-height: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  position: relative;
+}
+#debug {
+  position: fixed;
+  background: #fff;
+  padding: 5px;
+  color: #000;
+  top: 0;
+  left: 0;
+  z-index: 1337;
+}
+#carousel {
+  background: silver;
+  overflow: hidden;
+  width: 100%;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
+  -webkit-transform-style: preserve-3d;
+}
+#carousel ul.animate {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#carousel ul {
+  transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  -o-transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  -ms-transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  -moz-transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  -webkit-transform: translate3d(0%, 0, 0) scale3d(1, 1, 1);
+  overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+}
+#carousel ul {
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+#carousel li {
+  float: left;
+  overflow: hidden;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: translate3d(0, 0, 0);
+}
+#carousel li h2 {
+  color: #fff;
+  font-size: 30px;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+}
+#carousel li.pane1 {
+  background: #42d692;
+}
+#carousel li.pane2 {
+  background: #4986e7;
+}
+#carousel li.pane3 {
+  background: #d06b64;
+}
+#carousel li.pane4 {
+  background: #cd74e6;
+}
+#carousel li.pane5 {
+  background: #9fe1e7;
+}
+html,
+body {
+  margin: 0px;
+  padding: 0px;
+  background: url("http://digital.bnint.com/filelib/s9/photos/white_wood_4500x3000_lo_res.jpg");
+}
+.carousel {
+  position: relative;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+  margin-top: 26px;
+}
+.carousel-inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+.carousel-open:checked + .carousel-item {
+  position: static;
+  opacity: 100;
+}
+.carousel-item {
+  position: absolute;
+  opacity: 0;
+  -webkit-transition: opacity 0.6s ease-out;
+  transition: opacity 0.6s ease-out;
+}
+.carousel-item img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+.carousel-control {
+  background: rgba(0, 0, 0, 0.28);
+  border-radius: 50%;
+  color: #fff;
+  display: none;
+  font-size: 40px;
+  height: 40px;
+  line-height: 35px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  cursor: pointer;
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-align: center;
+  width: 40px;
+  z-index: 10;
+}
+.carousel-control.prev {
+  left: 2%;
+}
+.carousel-control.next {
+  right: 2%;
+}
+.carousel-control:hover {
+  background: rgba(0, 0, 0, 0.8);
+  color: #aaaaaa;
+}
+#carousel-1:checked ~ .control-1,
+#carousel-2:checked ~ .control-2,
+#carousel-3:checked ~ .control-3 {
+  display: block;
+}
+.carousel-indicators {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: 2%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 10;
+}
+.carousel-indicators li {
+  display: inline-block;
+  margin: 0 5px;
+}
+.carousel-bullet {
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 35px;
+}
+.carousel-bullet:hover {
+  color: #aaaaaa;
+}
+#carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
+#carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+  color: #428bca;
+}
+#title {
+  width: 100%;
+  position: absolute;
+  padding: 0px;
+  margin: 0px auto;
+  text-align: center;
+  font-size: 27px;
+  color: #ffffff;
+  font-family: 'Open Sans', sans-serif;
+  z-index: 9999;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
+}
 @media only screen and (min-width: 0rem) {
   #hero-1957 {
     /* removed at Tablet */
@@ -1301,12 +1486,12 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
   #cta-1693 {
-    padding-top: 3%;
+    padding-top: .8%;
     background: #239bec;
     background: linear-gradient(280deg, #239bec 0%, #1055bc 50%, #185fc9 100%);
     position: relative;
     overflow: hidden;
-    height: 150px;
+    height: 50px;
   }
   #cta-1693 .cs-container {
     width: 100%;
@@ -1328,19 +1513,20 @@
     gap: 0.5rem;
   }
   #cta-1693 .cs-title {
-    font-size: large;
+    font-size: 15px;
     max-width: 50ch;
     margin: 0;
     color: #fff;
   }
   #cta-1693 .cs-button-solid {
+    height: 30px;
     font-size: 1rem;
     font-weight: 700;
     /* 46px - 56px */
-    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    line-height: clamp(2rem, 2vw, 3.5rem);
     text-align: center;
     text-decoration: none;
-    min-width: 12.375rem;
+    min-width: 5.375rem;
     margin: 0;
     /* prevents padding from adding to the width */
     box-sizing: border-box;
@@ -1350,8 +1536,16 @@
     display: inline-block;
     position: relative;
     z-index: 1;
+    border-radius: 20px;
+    animation: blinker 1.5s linear infinite;
+  }
+  @keyframes blinker {
+    50% {
+      opacity: 0;
+    }
   }
   #cta-1693 .cs-button-solid:before {
+    height: 60%;
     content: "";
     width: 0%;
     height: 100%;
@@ -1362,6 +1556,7 @@
     left: 0;
     z-index: -1;
     transition: width 0.3s;
+    border-radius:20px ;
   }
   #cta-1693 .cs-button-solid:hover:before {
     width: 100%;
@@ -2523,244 +2718,6 @@ body.dark-mode .cs-button-5:before {
   body.dark-mode #steps-1209 .cs-text,
   body.dark-mode #steps-1209 .cs-item-text {
     opacity: 0.8;
-  }
-}
-/*-- -------------------------- -->
-<---       Meet The Team        -->
-<--- -------------------------- -*/
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-  #meet-team-1435 {
-    padding: var(--sectionPadding);
-  }
-  #meet-team-1435 .cs-container {
-    width: 100%;
-    /* changes to 1280px at large desktop */
-    max-width: 56.5rem;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* 48px - 64px */
-    gap: clamp(3rem, 6vw, 4rem);
-  }
-  #meet-team-1435 .cs-content {
-    /* set text align to left if content needs to be left aligned */
-    text-align: center;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    /* centers content horizontally, set to flex-start to left align */
-    align-items: center;
-  }
-  #meet-team-1435 .cs-button {
-    font-size: 1rem;
-    font-weight: 700;
-    /* 46px - 56px */
-    line-height: clamp(2.875rem, 8vw, 3.5rem);
-    text-decoration: none;
-    /* prevents button text from wrapping across lines */
-    white-space: nowrap;
-    margin: auto;
-    padding: 0 2.5rem;
-    color: var(--headerColor);
-    background-color: var(--primary);
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-  }
-  #meet-team-1435 .cs-button:hover:before {
-    width: 100%;
-  }
-  #meet-team-1435 .cs-button:before {
-    /* hover box */
-    content: "";
-    width: 0%;
-    height: 100%;
-    background: #000;
-    opacity: 1;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: width 0.3s;
-  }
-  #meet-team-1435 .cs-card-group {
-    width: 100%;
-    /* changes at tablet */
-    max-width: 25.8125rem;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    /* 16px - 20px */
-    gap: clamp(1rem, 1.8vw, 1.25rem);
-    position: relative;
-  }
-  #meet-team-1435 .cs-item {
-    list-style: none;
-    width: 100%;
-    border: 1px solid #e8e8e8;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    grid-column: span 12;
-    position: relative;
-    /* clips picture tag from overflowing */
-    overflow: hidden;
-  }
-  #meet-team-1435 .cs-picture {
-    width: 100%;
-    min-height: 18.75rem;
-    display: block;
-    position: relative;
-    z-index: 1;
-    /* removed at tablet */
-    aspect-ratio: 1.17142857;
-  }
-  #meet-team-1435 .cs-picture img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* makes sure the top of the image is at the top of the parent, heads won't get cut off this way */
-    object-position: top;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: transform 0.7s;
-  }
-  #meet-team-1435 .cs-info {
-    text-align: center;
-    width: 100%;
-    /* prevents padding from affecting the height and width */
-    box-sizing: border-box;
-    padding: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    z-index: 10;
-  }
-  #meet-team-1435 .cs-name {
-    font-size: 1.25rem;
-    font-weight: 700;
-    line-height: 1.2em;
-    text-align: inherit;
-    margin: 0 0 0.25rem 0;
-    color: var(--headerColor);
-    display: block;
-    transition: color 0.3s;
-  }
-  #meet-team-1435 .cs-job {
-    font-size: 1rem;
-    line-height: 1.5em;
-    text-align: inherit;
-    margin: 0 0 1rem 0;
-    color: var(--bodyTextColor);
-    display: block;
-  }
-  #meet-team-1435 .cs-social-group {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-  }
-  #meet-team-1435 .cs-link {
-    width: 2rem;
-    height: 2rem;
-    background-color: #e8e8e8;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s;
-  }
-  #meet-team-1435 .cs-link:hover {
-    background-color: var(--primary);
-  }
-  #meet-team-1435 .cs-link:hover .cs-icon {
-    filter: grayscale(100%) brightness(1000%);
-  }
-  #meet-team-1435 .cs-icon {
-    width: 0.75rem;
-    height: auto;
-    filter: grayscale(100%);
-    transition: filter 0.3s;
-  }
-}
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-  #meet-team-1435 .cs-card-group {
-    max-width: 100%;
-    align-items: stretch;
-  }
-  #meet-team-1435 .cs-item {
-    max-width: 100%;
-    grid-column: span 6;
-    transition: box-shadow 0.3s;
-  }
-  #meet-team-1435 .cs-item:hover {
-    box-shadow: 0px 4px 120px 0px rgba(0, 0, 0, 0.12);
-  }
-  #meet-team-1435 .cs-item:hover .cs-name {
-    color: var(--primary);
-  }
-  #meet-team-1435 .cs-picture {
-    height: 100%;
-    /* 280px - 350px, resets at desktop */
-    min-height: clamp(17.5rem, 33vw, 21.875rem);
-    background-color: #000;
-    overflow: hidden;
-    aspect-ratio: initial;
-  }
-  #meet-team-1435 .cs-picture img {
-    transition: transform 0.6s, opacity 0.3s;
-  }
-}
-/* Large Desktop - 1300px */
-@media only screen and (min-width: 81.25rem) {
-  #meet-team-1435 .cs-container {
-    max-width: 80rem;
-  }
-  #meet-team-1435 .cs-item {
-    grid-column: span 3;
-  }
-  #meet-team-1435 .cs-picture {
-    /* 245px - 338px */
-    height: clamp(15.3125rem, 27vw, 21.125rem);
-    min-height: 15.3125rem;
-  }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0rem) {
-  body.dark-mode #meet-team-1435 .cs-title,
-  body.dark-mode #meet-team-1435 .cs-name,
-  body.dark-mode #meet-team-1435 .cs-text,
-  body.dark-mode #meet-team-1435 .cs-job {
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #meet-team-1435 .cs-item {
-    border-color: var(--accent);
-  }
-  body.dark-mode #meet-team-1435 .cs-info {
-    background-color: var(--medium);
-  }
-  body.dark-mode #meet-team-1435 .cs-job,
-  body.dark-mode #meet-team-1435 .cs-text {
-    opacity: 0.8;
-  }
-  body.dark-mode #meet-team-1435 .cs-link {
-    background-color: var(--accent);
-  }
-  body.dark-mode #meet-team-1435 .cs-link:hover {
-    background-color: var(--primary);
-  }
-  body.dark-mode #meet-team-1435 .cs-social-group {
-    border-color: rgba(255, 255, 255, 0.2);
   }
 }
 /*-- -------------------------- -->
