--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1231,9 +1231,10 @@
         html, body, #carousel, #carousel ul, #carousel li {
             min-height: 100%;
             height: 100%;
-            padding: 0;
+       
             margin: 0;
             position: relative;
+          
         }
 
         #debug {
@@ -1250,6 +1251,7 @@
             background: silver;
             overflow: hidden;
             width:100%;
+        
             -webkit-backface-visibility: hidden;
             -webkit-transform: translate3d(0,0,0) scale3d(1,1,1);
             -webkit-transform-style: preserve-3d;
@@ -1340,6 +1342,7 @@ html, body {
   display: block;
   height: auto;
   max-width: 100%;
+  padding-top: 10%;
 }
 
 .carousel-control {
