--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -1184,7 +1184,6 @@ body,
 #carousel li {
   min-height: 100%;
   height: 100%;
-  padding: 0;
   margin: 0;
   position: relative;
 }
@@ -1287,6 +1286,7 @@ body {
   display: block;
   height: auto;
   max-width: 100%;
+  padding-top: 10%;
 }
 .carousel-control {
   background: rgba(0, 0, 0, 0.28);
