--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3469,7 +3469,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
     content: "";
     opacity: 0.7;
     display: block;
-    background: #000;
+    background: #0000003c;
     height: 100%;
     width: 100%;
   }
@@ -3530,8 +3530,8 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
   #footer .left-section p {
     opacity: 0.9;
     margin: auto;
-    width: 100%;
-    font-size: 0.875rem;
+    width: 120%;
+    font-size: 1rem;
     line-height: 1.92857143rem;
     color: #fff;
     text-align: center;
@@ -3616,14 +3616,14 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
     margin: auto;
     margin-top: 6.25rem;
     width: 96%;
-    font-size: 1rem;
+    font-size: 0.80rem;
     line-height: 2.25rem;
     color: #fff;
     text-align: center;
   }
   #footer .credit a {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.80rem;
     color: var(--primary);
   }
   #footer .credit a:hover {
@@ -3631,7 +3631,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
   }
   #footer .credit .copyright {
     display: block;
-    font-size: 1rem;
+    font-size: 0.80rem;
   }
 }
 /* Small Desktop */
@@ -3656,7 +3656,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
   }
   #footer .left-section .logo {
     margin-left: 0;
-    height: 2.5rem;
+    height: 4rem;
     text-align: left;
   }
   #footer .left-section p {
