--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -7,14 +7,14 @@
         <div class="left-section">
             <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/montanologo.png" alt="logo" width="264" height="78"></a>
             <p>
-                Our mission is to create affordable websites that help small businesses achieve their goals.
+                Exceptional renovation and plumbing services you can trust.
             </p>
         </div>
         <div class="right-section">
             <div class="lists">
                 <ul>
                     <li>
-                        <h2>Information</h2>
+                        <h2>SITEMAP</h2>
                     </li>
                     <li>
                         <a href="/index">Home</a>
