--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3507,7 +3507,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
   #footer {
     background: #1c1c1c;
     padding: 5.25rem 0 calc(20 / 16 * 1rem);
-    font-size: min(4vw, 1.2em);
+    font-size: min(1vw, 0.5rem);
   }
   #footer .left-section {
     margin: auto;
@@ -3530,7 +3530,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
   #footer .left-section p {
     opacity: 0.9;
     margin: auto;
-    width: 120%;
+    width: 100%;
     font-size: 1rem;
     line-height: 1.92857143rem;
     color: #fff;
