--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -59,7 +59,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:{{client.email}}">Click to Email</a>
+                        <a href="mailto:{{client.email}}">Email: maria@montanoplumbing.ca</a>
                     </li>
                 </ul>
             </div>
