--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -552,7 +552,7 @@
     color: var(--primary);
     min-width: 9.375rem;
     padding: 0 1.5rem;
-    background-color: var(--primary);
+    background-color: #fff;
     display: inline-block;
     position: relative;
     z-index: 1;
@@ -3410,7 +3410,7 @@ body.dark-mode .cs-button-5:before {
     opacity: 0.9;
     margin-bottom: 0.75rem;
     list-style: none;
-    font-size: 1.125rem;
+    font-size: 1rem;
     color: #fff;
   }
   #footer .right-section .lists ul li a {
@@ -3426,7 +3426,7 @@ body.dark-mode .cs-button-5:before {
     position: relative;
     margin-bottom: 2.3125rem;
     text-transform: uppercase;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 1.16666667em;
     font-weight: bold;
     color: #fff;
