--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -574,7 +574,7 @@
       color: var(--primary);
       min-width: 9.375rem;
       padding: 0 1.5rem;
-      background-color: var(--primary);
+      background-color: #fff;
       display: inline-block;
       position: relative;
       z-index: 1;
@@ -3558,7 +3558,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
     opacity: 0.9;
     margin-bottom: 0.75rem;
     list-style: none;
-    font-size: 1.125rem;
+    font-size: 1rem;
     color: #fff;
   }
   #footer .right-section .lists ul li a {
@@ -3574,7 +3574,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
     position: relative;
     margin-bottom: 2.3125rem;
     text-transform: uppercase;
-    font-size: 1.125rem;
+    font-size: 1rem;
     line-height: 1.16666667em;
     font-weight: bold;
     color: #fff;
