all photo compress 09062024

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -6,7 +6,7 @@
     <div class="cs-top-bar">
         <div class="cs-top-container">
             <!--Nav Logo-->
-            <a href="" class="cs-logo" aria-label="back to home">
+            <a href="/index" class="cs-logo" aria-label="back to home">
                 <img src="/assets/images/montanologo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
             </a>
             <div class="cs-contact-group">
