--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -23,13 +23,16 @@
                         <a href="/plumbingandheating">Plumbing & Heating</a>
                     </li>
                     <li>
-                        <a href="/constructionandrenovation">Construction & Renovation</a>
+                        <a href="/constructionandrenovation">Renovation</a>
                     </li>
                     <li>
                         <a href="/blog">Blog</a>
                     </li>
                     <li>
                         <a href="/contact">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="/gallery">Gallery</a>
                     </li>
                 </ul>
                 <ul>
@@ -68,7 +71,7 @@
 
     <div class="credit">
         <span>Designed and Hand Coded by</span>
-        <a href="/" target="_blank" rel="noopener">Bespoke Web Design</a>
+        <a href="https://bespokewebdesign.ca/" target="_blank" rel="noopener">Bespoke Web Design</a>
         <span class="copyright">
             Copyright {% year %} - Present</span>
     </div>
