--- a/src/assets/less/blog.less
+++ b/src/assets/less/blog.less
@@ -593,7 +593,7 @@
       font-size: clamp(20px, 5vw, 32px);
       line-height: 1.4em;
       font-weight: 700;
-      color: #4295cd;
+      color: var(--primary);
     }
     .recent-articles .blog-desc {
       margin: 1rem 0 2rem;
@@ -607,7 +607,7 @@
       display: inline-block;
       border-radius: 0.25rem;
       margin: auto;
-      background-color: #4295cd;
+      background-color: var(--primary);
       min-width: 9.375rem;
       /* prevents padding from adding to the width */
       box-sizing: border-box;
