--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1768,6 +1768,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
 @media only screen and (min-width: 0rem) {
   #cta-1693 {
   padding-top: 0.8%;
+  padding-bottom: var(--sectionPadding);
   background: rgb(35,155,236);
   background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%, rgba(24,95,201,1) 100%);
     position: relative;
@@ -1952,7 +1953,9 @@ background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,10
     opacity: .9;
 
   }
-  
+  #stats-1738 .cs-redirect{
+    text-decoration: none; /* Removes the underline */
+  }
   #stats-1738 .cs-link {
     font-size: 1rem;
     font-weight: 700;
@@ -1976,8 +1979,8 @@ background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,10
     display: block;
   }
   #stats-1738 .cs-arrow {
-    width: 2.5rem;
-    height: auto;
+    width: 3.5rem;
+    height: 3rem;
     display: block;
     transition: transform .3s;
     position: relative;
@@ -2167,10 +2170,10 @@ background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,10
   }
   #hero-408 .cs-stat-group {
       width: 100%;
-      border-radius: 1.25rem 0 0 1.25rem;
+      border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
       aspect-ratio: 0.92696629;
       /* clips the corners around the border radius */
-      overflow: hidden;
+      overflow:visible;
       display: flex;
       justify-content: center;
       align-items: flex-end;
@@ -2218,16 +2221,19 @@ background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,10
       height: 100%;
       top: 0;
       left: 0;
-      position: absolute;
+      position: relative;
+      left: 20px;
       z-index: -1;
   }
   #hero-408 .cs-background img {
-      position: absolute;
+      position: relative;
       top: 0;
-      left: 0;
+      left: -28px;
+      
       height: 100%;
       width: 100%;
       object-fit: cover;
+      border-radius: 12px;
   }
 }
 /* Tablet - 768px */
@@ -3450,7 +3456,8 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
 @media only screen and (min-width: 1300px) {
   #cta {
     position: relative;
-    margin-top: 6.25rem;
+    // margin-top: 6.25rem;
+    // margin-bottom: 6.25rem;
   }
   #cta .container {
     margin: auto;
