--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -2160,7 +2160,7 @@ background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,10
       width: 100%;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
   }
   #hero-408 .cs-logo {
       width: auto;
