--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -378,8 +378,8 @@
       /* prevents padding from affecting height and width */
       box-sizing: border-box;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: flex-start;
+      align-items: flex-start;
       order: 1;
       z-index: 10;
   }
