--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -265,6 +265,12 @@
 /*-- -------------------------- -->
 <---     Mobile Navigation      -->
 <--- -------------------------- -*/
+@media screen and (max-width: 820px) and (-webkit-min-device-pixel-ratio: 2) {
+  #cs-navigation .cs-logo {
+    justify-content: flex-start;
+    /* Force align left */
+  }
+}
 /* Mobile - 1023px */
 @media only screen and (max-width: 63.9375rem) {
   body.cs-open {
@@ -319,7 +325,7 @@
   #cs-navigation .cs-top-bar {
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
   }
   #cs-navigation .cs-top-container {
@@ -845,7 +851,7 @@
     max-width: 18.3125rem;
     height: 3.75rem;
     /* margin-right auto pushes everything away from it to the right */
-    margin: 0 auto 0 0;
+    margin: 0 0 0 0;
     padding: 0;
     display: flex;
     justify-content: flex-start;
