--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -344,6 +344,7 @@
       padding: clamp(1rem, 2.5vw, 1.25rem) 1rem;
       /* prevents padding from affecting height and width */
       box-sizing: border-box;
+      display: -webkit-flex; /* Safari 6.1+ */
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -731,6 +732,7 @@
       padding: 1rem;
       /* prevents padding from affecting height and width */
       box-sizing: border-box;
+      display: -webkit-flex; /* Safari 6.1+ */
       display: flex;
       justify-content: space-between;
       align-items: center;
