--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -3,6 +3,8 @@
 <!-- ============================================ -->
 
 <header id="cs-navigation">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <div class="cs-top-bar">
         <div class="cs-top-container">
             <!--Nav Logo-->
