--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -20,16 +20,16 @@
                         <a href="/index">Home</a>
                     </li>
                     <li>
-                        <a href="/plumbingandheating">Plumbing & Heating</a>
+                        <a href="/plumbing-and-heating">Plumbing & Heating</a>
                     </li>
                     <li>
-                        <a href="/constructionandrenovation">Renovation</a>
+                        <a href="/renovation">Renovation</a>
                     </li>
                     <li>
                         <a href="/blog">Blog</a>
                     </li>
                     <li>
-                        <a href="/contact">Contact Us</a>
+                        <a href="/contact-us">Contact Us</a>
                     </li>
                     <li>
                         <a href="/gallery">Gallery</a>
