--- a/src/assets/less/services.less
+++ b/src/assets/less/services.less
@@ -528,6 +528,8 @@
       padding: var(--sectionPadding);
       position: relative;
   }
+
+ 
   #gallery-48 .cs-container {
       width: 100%;
       max-width: 80rem;
@@ -548,9 +550,9 @@
       align-items: center;
   }
 
-  #gallery-48 .cs-title {
+  #gallery-48 .cs-title, p {
       margin: 0;
-      max-width: 20ch;
+      max-width: 60ch;
   }
   #gallery-48 .cs-image-group {
       /* used rem so it doesn't scale with the font size of on parent */
@@ -648,6 +650,8 @@
   #gallery-48 .cs-button-solid:hover:before {
       width: 100%;
   }
+
+  
 }
 
                               
