--- a/src/assets/css/services.css
+++ b/src/assets/css/services.css
@@ -509,9 +509,10 @@
     /* centers content horizontally, set to flex-start to left align */
     align-items: center;
   }
-  #gallery-48 .cs-title {
+  #gallery-48 .cs-title,
+  p {
     margin: 0;
-    max-width: 20ch;
+    max-width: 60ch;
   }
   #gallery-48 .cs-image-group {
     /* used rem so it doesn't scale with the font size of on parent */
