--- a/src/assets/less/gallery.less
+++ b/src/assets/less/gallery.less
@@ -9,6 +9,10 @@
 
         position: relative;
     }
+    #gallery-48  h3 {
+        margin: 0;
+        max-width: 60ch;
+    }
     #gallery-48 .cs-container {
         width: 100%;
         max-width: 80rem;
