--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -12,7 +12,7 @@
                 <img src="/assets/images/montanologo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
             </a>
             <div class="cs-contact-group">
-                <a class="cs-contact-link" href="mailto:yeg.mpc@gmail.com">
+                <a class="cs-contact-link" href="mailto:maria@montanoplumbing.ca">
                     <picture class="cs-wrapper">
                         <img class="cs-icon" loading="lazy" decoding="async" src="https://img.icons8.com/?size=100&id=85022&format=png&color=3952A2" alt="icon" width="24" height="24">
                     </picture>
