--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -1262,26 +1262,11 @@ body,
   width: 100%;
   text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
 }
-#carousel li.pane1 {
-  background: #42d692;
-}
-#carousel li.pane2 {
-  background: #4986e7;
-}
-#carousel li.pane3 {
-  background: #d06b64;
-}
-#carousel li.pane4 {
-  background: #cd74e6;
-}
-#carousel li.pane5 {
-  background: #9fe1e7;
-}
 html,
 body {
   margin: 0px;
   padding: 0px;
-  background: url("http://digital.bnint.com/filelib/s9/photos/white_wood_4500x3000_lo_res.jpg");
+  background: url("");
 }
 .carousel {
   position: relative;
@@ -1373,18 +1358,6 @@ body {
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
   color: #428bca;
-}
-#title {
-  width: 100%;
-  position: absolute;
-  padding: 0px;
-  margin: 0px auto;
-  text-align: center;
-  font-size: 27px;
-  color: #ffffff;
-  font-family: 'Open Sans', sans-serif;
-  z-index: 9999;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.33), -1px 0px 2px rgba(255, 255, 255, 0);
 }
 @media only screen and (min-width: 0rem) {
   #hero-1957 {
