--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -62,7 +62,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:{{client.email}}">Email: maria@montanoplumbing.ca</a>
+                        <a href="mailto:{{client.email}}">Email: info@montanoplumbing.ca</a>
                     </li>
                 </ul>
             </div>
