--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -73,6 +73,8 @@
         <span>Designed and Hand Coded by</span>
         <a href="https://bespokewebdesign.ca/" target="_blank" rel="noopener">Bespoke Web Design</a>
         <span class="copyright">
-            Copyright {% year %} - Present</span>
+            Copyright {% year %} - Present</span> |
+            <a href="/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a> |
+            <a href="/terms-of-service" target="_blank" rel="noopener">Terms of Service</a>
     </div>
 </footer>
