--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -294,6 +294,15 @@
   }
   
   
+
+
+
+
+
+
+
+
+  
   
   
   /*-- -------------------------- -->
@@ -623,9 +632,14 @@
   }
   #subscribe-1719 .cs-text {
     margin-bottom: 1rem;
+   
   }
   #subscribe-1719 .cs-text:last-of-type {
     margin-bottom: 2rem;
+    font-weight: 400;
+    font-size: large;
+
+
   }
   #subscribe-1719 .cs-form {
     width: 100%;
