--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -604,6 +604,8 @@
   }
   #subscribe-1719 .cs-text:last-of-type {
     margin-bottom: 2rem;
+    font-weight: 400;
+    font-size: large;
   }
   #subscribe-1719 .cs-form {
     width: 100%;
