--- a/src/assets/less/plumbing-and-heating.less
+++ b/src/assets/less/plumbing-and-heating.less
@@ -287,7 +287,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
 /* Large Desktop Parallax Effect - 100px */
 @media only screen and (min-width: 100rem) {
     #hero-1250 .cs-background {
-        background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/construction.jpg");
+        background: url("/assets/images/plumbheatlanding.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
