--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -39,7 +39,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Preloads -->
-    <link rel="preload" as="image" href="/assets/images/ogmontano.png" />
+    <link rel="preload" as="image" href="/assets/images/ogmontano.jpg" />
     <link
       rel="preload"
       as="font"
