--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -2084,7 +2084,7 @@ background: linear-gradient(280deg, rgba(16,85,188,1),  rgba(10,56,125,1) 50%,10
       color: #fff;
       min-width: 9.375rem;
       padding: 0 1.5rem;
-      background-color: #F41E1E;
+      background-color: var(--primary);
       border-radius: 0.25rem;
       display: inline-block;
       position: relative;
@@ -3617,12 +3617,11 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
     text-align: center;
   }
   #footer .credit a {
-    text-decoration: none;
+    text-decoration: underline;
     font-size: 0.80rem;
-    color: var(--primary);
   }
   #footer .credit a:hover {
-    text-decoration: underline;
+    color: var(--primary);
   }
   #footer .credit .copyright {
     display: block;
