--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -3618,6 +3618,7 @@ background: linear-gradient(280deg, rgba(35,155,236,1) 0%, rgba(16,85,188,1) 50%
   }
   #footer .credit a {
     text-decoration: underline;
+    color: #fff;
     font-size: 0.80rem;
   }
   #footer .credit a:hover {
