chore: reduced nav bar padding y.

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1116,7 +1116,8 @@
   }
   #cs-navigation .cs-li {
     list-style: none;
-    padding: 2.25rem 0;
+    // padding: 2.25rem 0;
+    padding: 1.5rem 0;
     /* prevent flexbox from squishing it */
     flex: none;
   }
