--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -162,7 +162,7 @@
 @media only screen and (min-width: 100rem) {
   #hero-1950 {
     .cs-background {
-      background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/restaurant-space.jpeg");
+      background: url("/assets/images/fence/fence-bg.avif");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
@@ -194,6 +194,142 @@
           opacity: 1;
         }
       }
+    }
+  }
+}
+
+/*-- -------------------------- -->
+<---  Auto Scroll Brands Images -->
+<--- -------------------------- -*/
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - (var(--scroller-gap) / 2)));
+  }
+}
+
+/* mobile*/
+#autoscroll-gallery {
+  width: 100%;
+  /* max-width: 80rem; */
+  /* margin: auto; */
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+
+  /* Using clamp to create fluid values based on viewport width */
+  --scroller-gap: clamp(1.5rem, calc(1rem + 2vw), 4rem);
+  /* --scroller-max-width: clamp(250px, calc(250px + 30vw), 800px); */
+  --scroller-max-width: 676px;
+
+  .cs-content {
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .gallery-wrapper {
+    li {
+      list-style: none;
+      transition:
+        transform 200ms ease-in-out,
+        filter 200ms linear;
+      touch-action: pan-y;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+
+      &:hover {
+        transform: translateY(-10%);
+        filter: grayscale(0);
+      }
+
+      img {
+        object-fit: contain;
+        /* width: clamp(150px, calc(150px + 5vw), 250px); */
+        /* height: 100%; */
+        max-width: 30px;
+        aspect-ratio: 1/1;
+      }
+
+      .cs-text {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .scroller {
+    .scroller-inner {
+      display: flex;
+      padding-block: 1rem;
+      padding-inline: 0;
+      gap: var(--scroller-gap);
+      align-items: center;
+      /* justify-content: space-around; */
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  }
+
+  /*animation starts here */
+  [data-animated="true"] {
+    overflow: hidden;
+
+    mask: linear-gradient(
+      90deg,
+      transparent,
+      white 20%,
+      white 80%,
+      transparent
+    );
+
+    .scroller-inner {
+      flex-wrap: nowrap;
+      animation: scroll var(--animation-duration, 20s)
+        var(--animation-direction, forwards) linear infinite;
+      width: fit-content;
+
+      &:hover {
+        animation-play-state: paused;
+        filter: grayscale(0.4);
+      }
+
+      li {
+        /* width: fit-content; */
+        width: max-content;
+
+        .cs-text {
+          width: max-content;
+        }
+      }
+    }
+  }
+
+  .scroller[data-direction="right"] {
+    --animation-direction: reverse;
+  }
+
+  .scroller[data-direction="left"] {
+    --animation-direction: reverse;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  #autoscroll-gallery {
+    .scroller {
+      max-width: (320/16rem);
+    }
+  }
+}
+
+@media screen and (min-width: 426px) {
+  #autoscroll-gallery {
+    .scroller {
+      max-width: var(--scroller-max-width);
     }
   }
 }
@@ -281,6 +417,13 @@
       grid-column: span 2;
       position: relative;
       z-index: 1;
+
+      &:last-child {
+        grid-column: 1/-1;
+        width: 100%;
+        margin-inline: auto;
+        max-width: 630px;
+      }
     }
 
     .cs-icon {
@@ -353,8 +496,8 @@
       display: none;
       position: absolute;
       top: (-220/16rem);
-      right: (-60/16rem);
-      transform: rotate(-66deg);
+      right: 15rem;
+      transform: rotate(280deg);
     }
   }
 }
