chore:nav bar mobile: move trigger to top nav . home page: added promotion banner and mobile sticky footer

--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -28,6 +28,15 @@
 
                 </a>
                 <a href="/contact" class="cs-button-solid">Schedule Appointment</a>
+
+                <!--Mobile Nav Toggle-->
+                <button class="cs-toggle" aria-label="mobile menu toggle">
+                    <div class="cs-box" aria-hidden="true">
+                        <span class="cs-line cs-line1" aria-hidden="true"></span>
+                        <span class="cs-line cs-line2" aria-hidden="true"></span>
+                        <span class="cs-line cs-line3" aria-hidden="true"></span>
+                    </div>
+                </button>
             </div>
             <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
             <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
