--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -78,6 +78,8 @@
 
     {% include "components/header.html" %}
     <main id="main">{% block body %}{% endblock %}</main>
-    {% include "components/footer.html" %}
+
+    {% include "components/sticky-cta.html" %} {% include
+    "components/footer.html" %}
   </body>
 </html>
