--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -1,5 +1,85 @@
 /* PAGE-SPECIFIC STYLES FOR THE HOME PAGE */
 /*-- -------------------------- -->
+<---       Canada Banner        -->
+<--- -------------------------- -*/
+@media only screen and (min-width: 0rem) {
+  .canada-banner {
+    --canadaBannerHeight: (152/16rem);
+    position: absolute;
+    top: var(--canadaBannerHeight);
+    z-index: 2;
+    width: 100%;
+    display: grid;
+    place-items: center;
+    background-color: var(--primaryLight);
+    padding: 0.75rem;
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15), 0px 3px 2px rgba(0, 0, 0, 0.15), 0px 4px 8px rgba(0, 0, 0, 0.15);
+  }
+  .canada-banner .cs-container {
+    grid-area: 1/1;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    font-weight: 600;
+  }
+  .canada-banner .cs-container img {
+    width: 15%;
+    height: auto;
+    place-self: end;
+  }
+  .canada-banner .cs-container .content-desktop {
+    display: none;
+  }
+  .canada-banner .cs-container .cs-text {
+    color: var(--bodyTextColorWhite);
+    width: fit-content;
+    font-size: 0.9rem;
+    text-wrap: balance;
+    text-align: center;
+  }
+  .canada-banner .cs-container a {
+    color: var(--bodyTextColorWhite);
+    border: 1px solid var(--bodyTextColorWhite);
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.25rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  }
+  .canada-banner .cs-container a::after {
+    content: "→";
+    font-size: 0.75rem;
+  }
+}
+@media only screen and (min-width: 35rem) {
+  .canada-banner .cs-container img {
+    width: 7%;
+  }
+}
+@media only screen and (min-width: 64rem) {
+  .canada-banner {
+    --canadaBannerHeight: 167px;
+  }
+  .canada-banner .cs-container img {
+    width: 5%;
+  }
+  .canada-banner .cs-container .content-mobile {
+    display: none;
+  }
+  .canada-banner .cs-container .content-desktop {
+    display: block;
+  }
+  .canada-banner .cs-container .cs-text {
+    text-wrap: unset;
+    text-align: center;
+    max-width: unset;
+  }
+}
+/*-- -------------------------- -->
 <---       Side By Side         -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
