--- a/src/assets/less/fence-deck.less
+++ b/src/assets/less/fence-deck.less
@@ -218,11 +218,12 @@
   align-items: center;
   position: absolute;
   bottom: 0;
+  background-color: var(--primaryLight);
 
   /* Using clamp to create fluid values based on viewport width */
   --scroller-gap: clamp(1.5rem, calc(1rem + 2vw), 4rem);
   /* --scroller-max-width: clamp(250px, calc(250px + 30vw), 800px); */
-  --scroller-max-width: 676px;
+  --scroller-max-width: 700px;
 
   .cs-content {
     text-align: center;
@@ -254,10 +255,15 @@
         /* height: 100%; */
         max-width: 30px;
         aspect-ratio: 1/1;
+        filter: drop-shadow(0 4px 4px rgb(0 0 0 / 0.3));
       }
 
       .cs-text {
         margin-bottom: 0;
+        text-shadow:
+          0px 1px 2px rgb(0 0 0 / 0.3),
+          0px 3px 2px rgb(0 0 0 / 0.3),
+          0px 4px 8px rgb(0 0 0 / 0.3);
       }
     }
   }
